[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rentpigeon"
version = "0.1.0"
description = "Streamlit app that scrapes & normalizes real-estate listings via ScrapFly."
requires-python = ">=3.10,<3.13"
authors = [{ name = "Jacob Rodriguez" }]
license = { text = "Proprietary" }

# Cross-platform, PyPI-friendly dependencies (trimmed to the likely direct needs)
dependencies = [
  "streamlit>=1.33,<2",
  "scrapfly-sdk==0.8.21",
  "pydantic>=2.6,<3",
  "httpx>=0.27,<0.28",
  "requests>=2.31,<3",
  "lxml>=5.2,<6",
  "parsel>=1.8,<2",
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "pydeck>=0.8,<1",
  "altair>=5.2,<6",
  "pyarrow>=16,<19",
  "pillow>=10,<12",
  "loguru>=0.7,<1",
  "backoff>=2.2,<3",
  "tenacity>=8.2,<9",
  "rapidfuzz>=3.7,<4",
  "w3lib>=2.1,<3",
  "PySocks>=1.7,<2",
  "watchdog>=4,<5",
  "openai>=1,<2",
  "protobuf>=4,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<0.24",
  "ruff>=0.4,<0.6",
  "mypy>=1.10,<2",
  "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["rentpigeon"]

windows = [
  "win-inet-pton>=1.1,<2",
  "win32-setctime>=1.1,<2",
  "pywin32-ctypes>=0.2,<1"
]
